minor tweak to code formatting

--- a/README.adoc
+++ b/README.adoc
@@ -371,6 +371,7 @@ actually look like? Let's walk through a simplified version of the process with 
 +
 *header*
 +
+[,json]
 ----
 {
   "alg": "none"
