Fix html escape plus char

--- a/README.adoc
+++ b/README.adoc
@@ -190,7 +190,7 @@ and conditional branch variant in the entire codebase is tested and required to 
 | `PBES2-HS384+A192KW`
 | PBES2 with HMAC SHA-384 and "A192KW" wrapping^*4*^
 
-| `+PBES2‑HS512&plus;A256KW+`
+| `+PBES2‑HS512+A256KW+`
 | PBES2 with HMAC SHA-512 and "A256KW" wrapping^*4*^
 |===
 +
@@ -2373,7 +2373,7 @@ Content Encryption Key (CEK):
 | `PBES2-HS384+A192KW`
 | PBES2 with HMAC SHA-384 and "A192KW" wrapping^*3*^
 
-| `+PBES2‑HS512&plus;A256KW+`
+| `+PBES2‑HS512+A256KW+`
 | PBES2 with HMAC SHA-512 and "A256KW" wrapping^*3*^
 |===
 
